--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIB6JbQUYKrEGd0kTAwlpZ2xZLl3EmebPPn3sfiIgNfY2w8y93KUg24G5H"
+    crossorigin="anonymous"
+/>
+
     <title>Vite + React</title>
   </head>
   <body>
